--- a/beds.html
+++ b/beds.html
@@ -131,6 +131,9 @@
             <a rel="noopener noreferrer" target="_blank" href="https://covidbihar.com/">Click here</a><br><br><br>
             <h3>Pune Bed Availability</h3>
             <a rel="noopener noreferrer" target="_blank" href="https://covidpune.com/">Click here</a><br><br><br>
+            <h3>Lucknow Bed Availability</h3>
+            <a rel="noopener noreferrer" target="_blank" href="https://beds.dgmhup-covid19.in/EN/covid19bedtrack">Click here</a><br><br><br>
+        </center>
         </center>
     </body>
 </html>
