--- a/resource.html
+++ b/resource.html
@@ -115,6 +115,7 @@
             <a rel="noopener noreferrer" target="_blank" href="https://phfi.org/covid19/covid-resources/">Resource 3</a><br><br>
             <a rel="noopener noreferrer" target="_blank" href="https://external.sprinklr.com/insights/explorer/dashboard/">Resource 4</a><br><br>
             <a rel="noopener noreferrer" target="_blank" href="https://www.mygov.in/covid-19">Resource 5</a><br><br>
+            <a rel="noopener noreferrer" target="_blank" href="https://covidfacts.in/">Resource 6</a><br><br>
             <br><br><br><br><br>
         </center>
     </body>
