--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         }, 2000);
     }
                 }
-                var myName = "Vansh";
+                var myName = prompt("Enter your name");;
                 function post() {
                     if (auth.currentUser.uid != null){
                     // get message
