--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
                 firebase.analytics();
                 var auth = firebase.auth();
                 var user = auth.currentUser;
+                var myName;
                 setTimeout(function(){
                     if (auth.currentUser.uid != null){
                         document.getElementById("l6").style.visibility = "hidden";
@@ -212,11 +213,12 @@
                     document.getElementById("container").innerHTML = html3;
                 }
                 function community(){
-                    alert("Make sure you are sign up or signed in");
+                    alert("Make sure you are signed up or signed in");
                     user = auth.currentUser.uid;
                     if (user == null){
                         alert("Please sign up or sign in to view community");
     }else if(auth.currentUser.uid != null){
+        myName = prompt("Enter your name");
         var html4 = "<h1>Community</h1><br><br><div id='community_container'></div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><input id='message' type='text'><button onclick='post()'>Send</button><br><br><br>";
                     document.getElementById("container").innerHTML = html4;
                     setTimeout(function(){
@@ -239,11 +241,10 @@
         }, 2000);
     }
                 }
-                var myName = prompt("Enter your name");;
                 function post() {
                     if (auth.currentUser.uid != null){
                     // get message
-                    var user = auth.currentUser.uid;
+                    user = auth.currentUser.uid;
                     var message = document.getElementById("message");
             
                     // save in database
