--- a/beds.html
+++ b/beds.html
@@ -84,6 +84,17 @@
             a{
                 color: rgb(25, 135, 195);
             }
+            #back{
+                float: left;
+                margin-left: 20px;
+                margin-top: 0px;
+                background-color: transparent;
+                border-color: transparent;
+                font-size: x-large;
+            }
+            #heading{
+                margin-right: 85px;
+            }
         </style>
     </head>
     <body>
@@ -109,9 +120,9 @@
         </div>
         </nav>
         <center>
-            <h1>Bed Availability</h1>
+            <button onclick="window.location = 'covid.html';" id="back">←</button><h1 id="heading">Bed Availability</h1>
             <p>By Vansh Mohan</p><br><br>
-            <h3>India Bed Availability</h3>
+            <h3>West Bengal Bed Availability</h3>
             <a rel="noopener noreferrer" target="_blank" href="https://covidsupport.live/request/?requested=bedhospital">Click here</a><br><br><br>
             <h3>Delhi Bed Availability</h3>
             <a rel="noopener noreferrer" target="_blank" href="https://coronabeds.jantasamvad.org/">Click here</a><br><br><br>
@@ -131,9 +142,6 @@
             <a rel="noopener noreferrer" target="_blank" href="https://covidbihar.com/">Click here</a><br><br><br>
             <h3>Pune Bed Availability</h3>
             <a rel="noopener noreferrer" target="_blank" href="https://covidpune.com/">Click here</a><br><br><br>
-            <h3>Lucknow Bed Availability</h3>
-            <a rel="noopener noreferrer" target="_blank" href="https://beds.dgmhup-covid19.in/EN/covid19bedtrack">Click here</a><br><br><br>
-        </center>
         </center>
     </body>
 </html>
