--- a/hospitals.html
+++ b/hospitals.html
@@ -85,6 +85,20 @@
                 font-size: 18px;
                 color: rgb(23, 156, 179);
             }
+            #back{
+                float: left;
+                margin-left: 30px;
+                margin-top: 0px;
+                background-color: transparent;
+                border-color: transparent;
+                font-size: x-large;
+            }
+            #heading{
+                margin-right: 75px;
+            }
+            #vansh{
+                margin-right: 90px;
+            }
         </style>
     </head>
     <body>
@@ -110,8 +124,8 @@
         </div>
         </nav>
         <center>
-            <h1>Hospitals</h1>
-            <p>By Vansh Mohan</p>
+            <button onclick="window.location = 'index.html';" id="back">←</button><h1 id="heading">Hospitals</h1>
+            <p id="vansh">By Vansh Mohan</p>
             <a rel="noopener noreferrer" target="_blank" href="https://www.google.com/maps/search/hospitals+near+me/">Hospitals near me</a><br><br><br>
             <a rel="noopener noreferrer" target="_blank" href="https://www.google.com/search?q=hospitals+near+me&rlz=1C5CHFA_enIN936IN936&sxsrf=ALeKk02yXfG9JKzQXfXjvp6OjvQpaHRgmg%3A1619779940331&ei=ZOGLYP3cE8be9QOflbGoDg&oq=hospitals+near+me&gs_lcp=Cgdnd3Mtd2l6EAMyCwgAELEDEIMBEMkDMgUIABCSAzIFCAAQkgMyAggAMggIABCxAxCDATIICAAQsQMQgwEyAggAMgIIADICCAAyAggAOgcIABBHELADOggIABCSAxCwAzoKCC4QsAMQyAMQQzoQCC4QxwEQowIQsAMQyAMQQzoQCC4QxwEQrwEQsAMQyAMQQzoNCAAQsQMQgwEQyQMQQ0oFCDgSATFQxSxYwEBgzUZoAXACeACAAbADiAH1GpIBBTMtNi4zmAEAoAEBqgEHZ3dzLXdpesgBDMABAQ&sclient=gws-wiz&ved=0ahUKEwj9ntS_5qXwAhVGb30KHZ9KDOUQ4dUDCA4&uact=5">Hospitals</a><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         </center>
