--- a/medicines.html
+++ b/medicines.html
@@ -84,6 +84,17 @@
             #pharmacy_site_link{
                 color: rgb(24, 154, 201);
             }
+            #back{
+                float: left;
+                margin-left: 50px;
+                margin-top: 15px;
+                background-color: transparent;
+                border-color: transparent;
+                font-size: x-large;
+            }
+            #heading{
+                margin-right: 85px;
+            }
         </style>
     </head>
     <body>
@@ -102,13 +113,13 @@
                     <li id="l3" class="links"><a href="index.html">Dashboard</a></li>
                     <li id="l" class="links"><a href="#main">Home</a></li>
                     <li id="l2" class="links"><a href="covid.html">Covid 19</a></li>
-                    <li id="l4" class="links"><a href="index.html">Hospitals</a></li>
+                    <li id="l4" class="links"><a href="hospitals.html">Hospitals</a></li>
                     <li id="l9" class="links"><a href="resource.html">Covid resources</a></li>
                     <li id="l10" class="links"><a href="vaccine.html">Covid vaccine</a></li>
                 </ul>
             </div>
             </nav>
-            <h1>Medicines</h1>
+            <button onclick="window.location = 'index.html';" id="back">←</button><h1 id="heading">Medicines</h1>
             <p>By Vansh Mohan</p><br><br><br>
             <div class="page-header" id="medicine">
                 <h2 class="text-capitalize">medicines for covid</h2>
