--- a/oxygen.html
+++ b/oxygen.html
@@ -90,6 +90,17 @@
                 width: 300px;
                 height: 50px;
             }
+            #back{
+                float: left;
+                margin-left: 50px;
+                margin-top: 0px;
+                background-color: transparent;
+                border-color: transparent;
+                font-size: x-large;
+            }
+            #heading{
+                margin-right: 105px;
+            }
         </style>
     </head>
     <body>
@@ -117,7 +128,7 @@
         </div>
         </nav>
         <center>
-            <h1>Oxygen Info</h1>
+            <button onclick="window.location = 'covid.html';" id="back">←</button><h1 id="heading">Oxygen Info</h1>
             <p>By Vansh Mohan</p><br><br><br>
             <a rel="noopener noreferrer" target="_blank" href="https://www.google.com/search?q=oxygen+setup+in+india&rlz=1C5CHFA_enIN936IN936&sxsrf=ALeKk01JRsxoFKWH52DS-HxPniTCgXx2ig:1619781844589&source=lnms&tbm=shop&sa=X&ved=2ahUKEwjniNfL7aXwAhU_7XMBHXjDDtwQ_AUoBHoECAEQBg&biw=1258&bih=678">OXYGEN BUY</a><br><br><br>
             <a rel="noopener noreferrer" target="_blank" href="https://www.google.com/search?q=oxygen+setup+in+india&rlz=1C5CHFA_enIN936IN936&sxsrf=ALeKk02JATMCvNPpOIcmQQeNMs3PNd2bhA:1619781804866&source=lnms&sa=X&ved=0ahUKEwj3sd647aXwAhVB7HMBHbuwC7UQ_AUIogMoAA&biw=1258&bih=678">OXYGEN INFO</a><br><br><br>
