--- a/resource.html
+++ b/resource.html
@@ -84,6 +84,17 @@
             a{
                 color: rgb(25, 140, 211);
             }
+            #back{
+                float: left;
+                margin-left: 20px;
+                margin-top: 0px;
+                background-color: transparent;
+                border-color: transparent;
+                font-size: x-large;
+            }
+            #heading{
+                margin-right: 80px;
+            }
         </style>
     </head>
     <body>
@@ -108,14 +119,13 @@
             </div>
         </nav>
         <center>
-            <h1>Covid Resources</h1>
+            <button onclick="window.location = 'covid.html';" id="back">←</button><h1 id="heading">Covid Resources</h1>
             <p>By Vansh Mohan</p><br><br><br><br>
             <a rel="noopener noreferrer" target="_blank" href="https://www.covid19india.org/resources">Resource 1</a><br><br>
             <a rel="noopener noreferrer" target="_blank" href="https://covid19-twitter.in/">Resource 2</a><br><br>
             <a rel="noopener noreferrer" target="_blank" href="https://phfi.org/covid19/covid-resources/">Resource 3</a><br><br>
             <a rel="noopener noreferrer" target="_blank" href="https://external.sprinklr.com/insights/explorer/dashboard/">Resource 4</a><br><br>
             <a rel="noopener noreferrer" target="_blank" href="https://www.mygov.in/covid-19">Resource 5</a><br><br>
-            <a rel="noopener noreferrer" target="_blank" href="https://covidfacts.in/">Resource 6</a><br><br>
             <br><br><br><br><br>
         </center>
     </body>
