--- a/vaccine.html
+++ b/vaccine.html
@@ -84,6 +84,18 @@
             a{
                 color: rgb(24, 146, 198);
             }
+            #back{
+                float: left;
+                margin-left: 30px;
+                margin-top: 0px;
+                background-color: transparent;
+                border-color: transparent;
+                font-size: x-large;
+            }
+            #heading{
+                margin-right: 85px;
+                font-size: x-large;
+            }
         </style>
     </head>
     <body>
@@ -106,7 +118,7 @@
                 </ul>
             </div>
             </nav>
-            <h1>Covid Vaccine Registration</h1>
+            <button onclick="window.location = 'index.html';" id="back">←</button><h1 id="heading">Covid Vaccine Registration</h1>
             <p>By Vansh Mohan</p><br><br><br>
             <a rel="noopener noreferrer" target="_blank" href="https://www.cowin.gov.in/home">Register For Vaccine</a>
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
