--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                     <li id="l2" class="links"><a href="covid.html">Covid 19</a></li>
                     <li id="l3" class="links"><a href="medicines.html">Medicines</a></li>
                     <li id="l4" class="links"><a href="hospitals.html">Hospitals</a></li>
+                    <li id="l3" class="links"><a href="entertainment.html">Entertainment</a></li>
                     <li id="l5" class="links"><a onclick="community()" href="#container">Community</a></li>
                     <li id="l6" class="links"><a onclick="login_setup()">Sign In</a></li>
                     <li id="l7" class="links"><a onclick="logup_setup()">Sign Up</a></li>
