--- a/covid.html
+++ b/covid.html
@@ -100,6 +100,7 @@
                 <li id="l" class="links"><a href="index.html">Dashboard</a></li>
                 <li id="l2" class="links"><a href="#main">Home</a></li>
                 <li id="l3" class="links"><a href="case.html">Covid cases</a></li>
+                <li id="l3" class="links"><a href="entertainment.html">Entertainment</a></li>
                 <li id="l4" class="links"><a href="oxygen.html">Oxygen Info</a></li>
                 <li id="l5" class="links"><a href="beds.html">Bed Availability</a></li>
                 <li id="l6" class="links"><a href="#prev">Covid prevention</a></li>
