--- a/entertainment.html
+++ b/entertainment.html
@@ -60,7 +60,7 @@
                 <div class="collapse navbar-collapse" id="MyNavbar">
                     <ul class="nav navbar-nav">
                         <li id="l" class="links"><a href="index.html">Dashboard</a></li>
-                        <li id="l2" class="links"><a href="#main">Covid 19</a></li>
+                        <li id="l2" class="links"><a href="covid.html">Covid 19</a></li>
                         <li id="l2" class="links"><a href="#main">Home</a></li>
                         <li id="l3" class="links"><a href="case.html">Covid cases</a></li>
                         <li id="l4" class="links"><a href="oxygen.html">Oxygen Info</a></li>
