--- a/entertainment.html
+++ b/entertainment.html
@@ -65,8 +65,8 @@
                         <li id="l3" class="links"><a href="case.html">Covid cases</a></li>
                         <li id="l4" class="links"><a href="oxygen.html">Oxygen Info</a></li>
                         <li id="l5" class="links"><a href="beds.html">Bed Availability</a></li>
-                        <li id="l6" class="links"><a href="#prev">Covid prevention</a></li>
-                        <li id="l7" class="links"><a href="#symp">Covid symptoms</a></li>
+                        <li id="l6" class="links"><a href="https://www.google.com/search?q=covid+prevention&rlz=1C5CHFA_enIN936IN936&oq=covid+prevention&aqs=chrome..69i57j0l9.3330j0j7&sourceid=chrome&ie=UTF-8">Covid prevention</a></li>
+                        <li id="l7" class="links"><a href="https://www.google.com/search?q=covid+symptoms&rlz=1C5CHFA_enIN936IN936&oq=covid+symptoms&aqs=chrome..69i57j0i433j0j0i433l3j0l3j0i433.4538j0j7&sourceid=chrome&ie=UTF-8">Covid symptoms</a></li>
                     </ul>
                 </div>
             </nav>
