--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 font-family: 'Hanalei', cursive;
             }
             a{
-                color: black;
+                color: blue;
                 padding: 15px 5px;
                 text-decoration: none;
                 display: inline-block;
